# course-computer-science

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FORKING.md  LESSON_TEMPLATE.md  Makefile  README.md  ROADMAP.md  SECURITY.md  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 01_lesson_content.yml  02_translation.yml  03_lesson_code.yml  04_website_bug.yml  05_feature_or_lesson.yml  config.yml
.github/workflows/: ci.yml  pages.yml
docs/: TRANSLATING.md
glossary/: terms.md
phases/00-setup-and-tooling/: README.md
phases/00-setup-and-tooling/06-build-systems-make-cmake-bazel-cargo/code/: BUILD.bazel  CMakeLists.txt  Makefile  greet.c  greet.h  run.sh
phases/00-setup-and-tooling/06-build-systems-make-cmake-bazel-cargo/code/cargo-version/src/: main.rs
phases/01-discrete-math-and-logic/: README.md
phases/02-programming-foundations-and-memory-model/: README.md
phases/03-data-structures/: README.md
phases/04-algorithms-and-complexity/: README.md
phases/05-theory-of-computation/: README.md
phases/06-digital-logic-and-architecture/: README.md
phases/07-operating-systems/: README.md
phases/08-compilers-and-language-design/: README.md
phases/09-computer-networks/: README.md
phases/10-databases-and-storage/: README.md
phases/11-distributed-systems/: README.md
phases/12-cryptography-and-security/: README.md
phases/13-concurrent-and-parallel/: README.md
phases/14-graphics-and-visualization/: README.md
phases/15-systems-performance/: README.md
phases/16-software-engineering-and-architecture/: README.md
phases/17-testing-and-verification/: README.md
phases/18-language-paradigms-and-type-theory/: README.md
phases/19-capstone-projects/: README.md
scripts/: scaffold-lesson.sh  scaffold_course.py
site/: CNAME  build.js  catalog.html  data.js  glossary.html  header.js  index.html  lesson.html  package.json  prereqs.html  robots.txt  style.css
site/i18n/: i18n.js  languages.js
tests/: i18n.test.cjs
(+1926 files in other folders)
